Funcion Recuperar texto completa

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <body>
     <input type="button" value="Click" onclick="saludar();"/>
     <img src="./images/giphy.gif" width="200px" id="imgSaludo"/>
-</body>
-</html>
+</body> sssss 
+</html>sss 
