--- a/utilitarios/saludo.html
+++ b/utilitarios/saludo.html
@@ -9,6 +9,10 @@
     <input type="text" id="txtNombre"/>
     <h3>Ingrese su apellido</h3>
     <input type="text" id="txtApellido"/>
+    <h3>Igrese su edad</h3>
+    <input type="text" id="txtEdad"/>
+    <h3>Ingrese su estatura</h3>
+    <input type="text" id="txtEstatura"/>
     <input type="button" value="saludar" onclick="saludar();">
 </body>
 </html>
