Se separan las funciones al archivo utilitarios.js

--- a/utilitarios/saludo.html
+++ b/utilitarios/saludo.html
@@ -3,6 +3,7 @@
 <head>
     <title>Document</title>
     <script src="saludos.js"></script>
+    <script src="utilitarios.js"></script>
 </head>
 <body>
     <h3>Ingrese su txtNombre</h3>
