--- a/placas/placas.html
+++ b/placas/placas.html
@@ -27,6 +27,7 @@
                     <div class="error" id="lblError1"></div>
                     <div class="error" id="lblProvincia"></div>
                     <div class="error" id="lblTipo"></div>
+                    <div class="error" id="lblPico"></div>
 
                 </div>
             </div>
