--- a/Objetos/objetos.html
+++ b/Objetos/objetos.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <input type="button" value="PRUEBA1" onclick="crearProducto();">
+    <input type="button" value="PRUEBA 4" onclick="probarIncrementarSaldo();">
+    <input type="button" value="PRUEBA 5" onclick="probarDeterminarMayor();">
 </body>
 </html>
