Roles Reto 45 completado parte 1

--- a/roles/roles.html
+++ b/roles/roles.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="logoEscuela">
-                <img src="./imagenes/logoKrakeDev.png" width="80%" />
+                <img src="./imagenes/empleado" width="80%" />
             </div>
         </div>
     </div>
@@ -173,7 +173,7 @@
                 </div>
             </div>
             <div class="logoEscuela">
-                <img src="./imagenes/logoKrakeDev.png" width="80%" />
+                <img src="./imagenes/rolPagos" width="80%" />
             </div>
         </div>
     </div>
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="logoEscuela">
-                <img src="./imagenes/logoKrakeDev.png" width="80%" />
+                <img src="./imagenes/animated-resume.jpg" width="80%" />
             </div>
         </div>
     </div>
