--- a/roles/roles.html
+++ b/roles/roles.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="botones">
                     <div class="contenedorBoton">
-                        <input type="button" value="GUARDAR" class="estiloBoton" />
+                        <input type="button" value="GUARDAR" class="estiloBoton" onclick="guardarRol();"/>
                     </div>
                 </div>
             </div>
